# Museum

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt
Museum/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Museum/management/commands/: populate_db.py
Museum/migrations/: 0001_initial.py
Museum/tests/: __init__.py  test_models.py  test_views.py
config/: settings.py  urls.py
static/admin/css/: custom_admin.css
static/css/: dark-theme.css  styles.css  styles.min.css
static/js/: main.js
templates/: base.html  exhibitions.html  index.html  main.html
templates/hernya/: about.html  contact.html  events.html  exhibits.html  index.html  main.html
